--- a/favouritesPage/favPage.html
+++ b/favouritesPage/favPage.html
@@ -75,7 +75,7 @@
                 </div>
             </div>
         </div>
-        <nav class="nav-drop-down">
+        <nav class="nav-drop-down" id="navDropDown">
             <ul>
                 <li onmouseover=blackscreen() on onmouseleave=blackscreenout()>
                     <a href="../product_pages/productsPage.html" onclick="localStorage.setItem('product_type',JSON.stringify(tees))">
