--- a/product_pages/productSinglePage.html
+++ b/product_pages/productSinglePage.html
@@ -83,7 +83,7 @@
                 </div>
             </div>
         </div>
-        <nav class="nav-drop-down">
+        <nav class="nav-drop-down" id="navDropDown">
             <ul>
                 <li>
                     <a href="./productsPage.html" onclick="localStorage.setItem('product_type',JSON.stringify(tees))">
