--- a/login.html
+++ b/login.html
@@ -47,7 +47,6 @@
                   <div><p style="color:grey;font-size:20px;">Login to resume your journey.</p></div>
                 </div>
 
-                <!-- LOGIN FORM: action -> /login, method -> POST, names added -->
                 <div id="login-message" class="signup-message" style="display:none;">
                     Signup successful! Please login.
                 </div>
@@ -97,6 +96,7 @@
                   <input name="otp" type="text" placeholder="Enter 6-digit OTP" maxlength="6" required pattern="[0-9]{6}">
                   <button class="login-button" type="submit">Verify & Signup</button>
                   <button class="login-button" type="button" id="resendOtpBtn" style="background:white;color:#ee0652;border:2px solid #ee0652;">Resend OTP</button>
+                  <button class="login-button" type="button" id="backToFormBtn" style="background:white;color:#666;border:2px solid #666;">Back to Form</button>
                 </form>
               </div>
 
